fix alignment of group filters on <650px

--- a/style.scss
+++ b/style.scss
@@ -4168,6 +4168,15 @@ body {
 /* --- Tablets --- }}} */ 
 
 /* --- Phones --- {{{2 */ 
+
+/* 650px is where the subnav filters act strangely */ 
+@media only screen and (max-width: 650px) { 
+	div#subnav.item-list-tabs ul li { 
+		margin-left: 0px !important;
+		float: none !important;
+		display: block;
+	} 
+} 
 /* 500px is about where the slider starts to act strangely */ 
 @media only screen and (max-width: 500px) { 
 	.mobile-slider { 
